--- a/PICUdrugs/Content/EnterPtData-0.4.css
+++ b/PICUdrugs/Content/EnterPtData-0.4.css
@@ -203,4 +203,11 @@ table.tabData
     font-weight:bold;
     border: solid 1px red;
 }
-
+div.hidden {
+    display:none;
+}
+.explanation {
+    color:navy;
+    font-size:0.8em;
+    font-style:italic;
+}
