--- a/PICUdrugs/Content/EnterPtData-0.5.css
+++ b/PICUdrugs/Content/EnterPtData-0.5.css
@@ -211,3 +211,9 @@ div.hidden {
     font-size:0.8em;
     font-style:italic;
 }
+#departmentNotes {
+    background: none repeat scroll 0 0 lightyellow;
+    border: 1px solid #00309C;
+    margin: 0 1em;
+    padding: 0 1em;
+}
