multiple infusions if different ward

--- a/PICUdrugs/Content/departmentListOrder.css
+++ b/PICUdrugs/Content/departmentListOrder.css
@@ -106,6 +106,6 @@ li.bolusSubHeader > div:first-child
 }
 .specificWard {
     font-size:85%;
-    color:navy;
+    color:red;
     font-style:italic;
 }
