--- a/PICUdrugs/Content/PICUdrugsGenericStyles.css
+++ b/PICUdrugs/Content/PICUdrugsGenericStyles.css
@@ -1,5 +1,4 @@
-﻿@media (min-width: 981px) { body { padding-top: 60px; } } 
-.validationError, .DDValidator
+﻿.validationError, .DDValidator
 {
     color:Red;
 }
